# master

./: .dockerignore  .gitignore  .wandbignore  AGENTS.md  Dockerfile  README.md  launch_config.yaml  pyproject.toml  requirements.txt  visualizer.py
.agent/: PROJECT.md  STATE.example.md
.agent/hooks/: tool_guard.py
.agents/: AGENTS.md
.agents/legacy/: CLAUDE.md
.agents/rules/: 00-core.md
.github/workflows/: ci.yaml
configs/: base.yaml  best.yaml  config.py  defaults.yaml  model.yaml  mos_config.py
configs/experiments/: fine_tune.yaml  linear_probe.yaml  pretrain.yaml
configs/models/: mossong_plus.yaml
configs/profiles/: benchmark_fp32.yaml  benchmark_mixed.yaml  ci.yaml  local.yaml  pilot.yaml  wandb_launch.yaml
deployment/espdl/: CMakeLists.txt
deployment/tflitemicro/: CMakeLists.txt  partitions_ota_16mb.csv  partitions_ota_8mb.csv  sdkconfig  sdkconfig.defaults
deployment/tflitemicro/main/: CMakeLists.txt  audio_provider.cc  audio_provider.h  classification.cc  classification.h  config.h  idf_component.yml  main.cc  model.h  ota_update.cc  ota_update.h  wifi_helper.cc  wifi_helper.h
docs/: architecture.md
model/: mossongplus.py
notebooks/: signal.ipynb
ops/benchmarks/: compare-precision.sh
ops/wandb/: README.md  agents.env.example  docker-queue-config.json  gpu-agent-supervisor.py  launch-config.yaml  start-artifact-sync.sh  start-gpu-agents.sh  train-pretrain.sh  wingbeat-agents.service  wingbeat-artifact-sync.service
src/evaluation/: evaluate.py  report.py
src/framework/: callbacks.py  loss.py  optimizer.py
src/io/: loader.py
src/quantization/: tensorflow.py  tf_quantize.py
src/wingbeat_ml/: __init__.py  __main__.py  cli.py  registry.py
tests/: capture_baselines.py  generate_fixtures.py  test_parity.py
tests/parity/: test_config_parity.py  test_data_parity.py
tests/unit/: test_artifact_handoff.py  test_audio.py  test_augmentations.py  test_baseline_negative.py  test_ci_profile.py  test_config_cli.py  test_config_loader.py  test_config_schema.py  test_dataset.py  test_distribution_boundary.py  test_evaluation_quality.py  test_export_pipeline.py  test_legacy_boundaries.py  test_manifest.py  test_model_mossong_plus.py  test_performance_agents_design.py  test_phase10_ops.py  (+8 more)
tools/: refresh-gitnexus.sh
(+76 files in other folders)
