[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wingbeat-ml"
version = "0.1.0"
description = "A complete research and MLOps system for mosquito wingbeat analysis"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "build",
]

[project.scripts]
wingbeat-ml = "wingbeat_ml.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["wingbeat_ml*"]
namespaces = false

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
